homework landing page with button center

--- a/Week2_Homework/homework-landingpage/index.html
+++ b/Week2_Homework/homework-landingpage/index.html
@@ -16,8 +16,8 @@
 			<div id="section1">
 				<h1>Relaxr</h1>
 				<p>Get piece of mind with a single tap</p>
-			<div id="button">
-				<button>Get it Now</button>
+			<div id="now">
+				<button id="button">Get it Now</button>
 			</div>
 		</div>
 
