--- a/Week2_Homework/homework-landingpage/index.html
+++ b/Week2_Homework/homework-landingpage/index.html
@@ -34,7 +34,7 @@
 
 			<div id="section3">
 					<p4>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."</p4>
-					<p5> - Amanda, Intuit</p5>
+					<span> - Amanda, Intuit</span>
 			</div>
 				
 			<div id="banner">
