--- a/Week3_Homework_Relaxr/index2.html
+++ b/Week3_Homework_Relaxr/index2.html
@@ -102,7 +102,7 @@
         <a href="#"><img src="facebook.png"></a>
       </nav>
 
-      <p id="copyright">Copyright 2015. Relaxr.</p>
+      <p>Copyright 2015. Relaxr.</p>
     </footer>
     
 
