--- a/Week3_Homework_startup/index.html
+++ b/Week3_Homework_startup/index.html
@@ -15,8 +15,8 @@
         </h1>
         <div id="find">
         <nav>
-            <a href="#">Find Developers</a>
-            <a href="#">Find Designers</a>
+            <a href="#">Developers</a>
+            <a href="#">Designers</a>
             <a href="#">How it works</a>
             <a href="#">Our Team</a>
             <a href="#">Blog</a>
@@ -26,7 +26,7 @@
 
     <div id="quote">
     <blockquote>
-        Because two brains <strike>taste</strike> <span>are</span> better than one.
+        Because two brains <strike>taste</strike> <span><u>are</u></span> better than one.
     </blockquote>
 </div>
 
