--- a/Week 7_classwork/index.html
+++ b/Week 7_classwork/index.html
@@ -16,7 +16,7 @@
    <section>
 
             <header>
-                <h1>Convert Celsius to Farenheit</h1>
+                <h1>Win D. Weather</h1>
                 <div id="raggedimage"></div>
                 <nav></nav>
             </header>
