--- a/Week 7_classwork/index.html
+++ b/Week 7_classwork/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
   <meta charset="UTF-8">
-  <title>Convert Celsius To Fareneheit</title>
+  <title>Win D. Weather</title>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 
 </head>
@@ -44,8 +44,6 @@
                 </div>
 
                
-
-
         </section>
 
           <script src="js/index.js"></script>
